--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -43,5 +43,6 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
-          plugin_repositories: yes
-          plugin_repositories_order: featured, pinned, starred, random
+          plugin_notable: yes
+          plugin_notable_from: organization
+          plugin_notable_types: commit
